tests/fixtures/invalid/enum_constant_assignment.c
int main() {
    enum Status { READY = 1 };
    READY = 2;
    return READY;
}
